task 3 vertical alignment fixed in content_top. column_right

--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -64,41 +64,55 @@ nav li {
 
 .wrapper .content .content_top {
     display: flex;
+
     height: 800px;
     background-color: #16a085;
+
 }
 
-.wrapper .content .content_top .column {
-    navbutton_background_color: #1abc9c;
+.wrapper .content_top .column_left {
     margin-top: 100px;
-    font-size: 35px;
     width: 50%;
 }
 
-.top_content_header {
+.wrapper .content .content_top .column_right {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    navbutton_background_color: #1abc9c;
+    margin-right: 5%;
+    font-size: 35px;
+    width: 50%;
+    vertical-align: baseline;
+    text-align: justify;
+    align-content: baseline;
+    justify-content: space-evenly;
+}
+
+.wrapper .content .content_top .column_right .top_content_header {
     font-size: 45px;
+    position: relative;
+    flex-grow: 1;
 }
 
-.top_content {
-    position: absolute;
-    margin-top: 70px;
+.wrapper .content .content_top .column_right .top_content {
+    position: relative;
+    margin-top: 100px;
+    flex-grow: 1;
 }
 
-.wrapper .content .content_top .column .buy_now {
+.wrapper .content .content_top .column_right .buy_now {
     color: #fff;
     background-color: #16a085;
+    position: relative;
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #fff;
     width: 250px;
     height: 60px;
     font-size: 30px;
-    margin-top: 350px;
     justify-content: center;
 }
-
-/*.wrapper .content.content_top .column:first-of-type {*/
-/*}*/
 
 .image {
     height: 600px;
