--- a/WD_PS1/Task4/css/style.css
+++ b/WD_PS1/Task4/css/style.css
@@ -2,21 +2,19 @@ body {
 }
 
 .wrapper {
+    margin-top: 30px;
     width: 100%;
     display: flex;
-
 }
 
 .wrapper .column {
     flex-grow: 1;
     height: 600px;
-
 }
 
 .wrapper .column:first-of-type {
     flex-grow: 1;
     width: 50%;
-
 }
 
 .image {
@@ -34,11 +32,28 @@ body {
 
 }
 
+
 .name_of_game {
     color: #d3bb89;
     font-size: 40px;
-    font-family: serif -EB Garamond;
+    font-family: "Game of Thrones";
     text-transform: uppercase;
     margin-top: 40px;
-
 }
+
+.second_string {
+    color: #fef8eb;
+    font-family: sans-serif;
+    font-size: 20px;
+    margin-top: 100px;
+    margin-left: 60px;
+    border-left-color: #d3bb89;
+}
+ .menu_of_game {
+     color: #d3bb89;
+     font-family: Garamond;
+     font-size: 20px;
+     margin-left: 60px;
+
+ }
+
